tests/typing/fail/cascading_formal_fail.rb

def f(x, y = x)
  y.foo
end

f(3) + 2
